src/network/diagnostic message [8]
error[E0277]: the trait bound `std::net::SocketAddr: From<&str>` is not satisfied
   --> src/network/udp.rs:209:76
    |
209 |             let (msg, src_addr) = Test::udp_recv_from(110,"127.0.0.1:8080".into()).await.unwrap();
    |                                                                            ^^^^ the trait `From<&str>` is not implemented for `std::net::SocketAddr`
    |
    = help: the following other types implement trait `From<T>`:
              `std::net::SocketAddr` implements `From<(I, u16)>`
              `std::net::SocketAddr` implements `From<SocketAddrV4>`
              `std::net::SocketAddr` implements `From<SocketAddrV6>`
    = note: required for `&str` to implement `Into<std::net::SocketAddr>`

